--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,21 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-23 Sat 12:16]
+#+CAPTION: Clock summary at [2017-12-23 Sat 14:20]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *80:49* |       |       | 100.0 |
+| *Total time*                                                                | *81:20* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 80:49   |       |       | 100.0 |
-| Active                                                                      |         | 80:49 |       | 100.0 |
+| Stories                                                                     | 81:20   |       |       | 100.0 |
+| Active                                                                      |         | 81:20 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   1.3 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:51 |   3.5 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  3:22 |   4.1 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   0.7 |
 | COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  10.7 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  17.0 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  16.9 |
 | COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   2.9 |
-| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  19.9 |
+| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  19.7 |
 | COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.5 |
 | COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   2.5 |
 | COMPLETED Add some kind of identity to exomodels                            |         |       |  0:12 |   0.2 |
@@ -36,16 +36,16 @@
 | COMPLETED Create a =probing= model                                          |         |       |  1:22 |   1.7 |
 | COMPLETED Create the =external= model                                       |         |       |  5:07 |   6.3 |
 | COMPLETED Rename =yarn.json= to =external.json=                             |         |       |  1:51 |   2.3 |
-| COMPLETED Rename =yarn.dia= to =external.dia=                               |         |       |  2:43 |   3.4 |
-| COMPLETED Make =dogen= part of model modules                                |         |       |  3:27 |   4.3 |
+| COMPLETED Rename =yarn.dia= to =external.dia=                               |         |       |  2:43 |   3.3 |
+| COMPLETED Make =dogen= part of model modules                                |         |       |  3:27 |   4.2 |
 | COMPLETED Fix travis build                                                  |         |       |  0:03 |   0.1 |
 | COMPLETED Do a quick hack to fix name resolution                            |         |       |  1:20 |   1.6 |
 | COMPLETED Rename =formatters= to =formatting=                               |         |       |  1:45 |   2.2 |
 | COMPLETED Rename =yarn= to =modeling=                                       |         |       |  1:58 |   2.4 |
-| COMPLETED Rename =quilt.cpp= to =generation.cpp=                            |         |       |  2:04 |   2.6 |
+| COMPLETED Rename =quilt.cpp= to =generation.cpp=                            |         |       |  2:04 |   2.5 |
 | COMPLETED Rename =quilt.csharp= to =generation.csharp=                      |         |       |  2:11 |   2.7 |
 | COMPLETED Create the =templating= model                                     |         |       |  1:15 |   1.5 |
-| STARTED Finish setting up coveralls                                         |         |       |  2:57 |   3.7 |
+| STARTED Finish setting up coveralls                                         |         |       |  2:57 |   3.6 |
 | STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   1.3 |
 | STARTED Investigate current implementation of the origin transform          |         |       |  0:18 |   0.4 |
 | STARTED Remove exomodel and all deprecated classes                          |         |       |  0:40 |   0.8 |
@@ -113,6 +113,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 - [[https://gitter.im/DomainDrivenConsulting/dogen][Gitter]]
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2017-12-23 Sat 13:49]--[2017-12-23 Sat 14:20] =>  0:31
     CLOCK: [2017-12-21 Thu 22:59]--[2017-12-21 Thu 23:04] =>  0:05
     CLOCK: [2017-12-14 Thu 09:08]--[2017-12-14 Thu 09:12] =>  0:04
     CLOCK: [2017-12-10 Sun 21:15]--[2017-12-10 Sun 21:34] =>  0:19
@@ -741,6 +742,40 @@ Approach:
   endomodel to generation model.
 - augment formattables with the new element properties. Supply this
   data via the context or assistant.
+
+*** Reduce build times to avoid timeouts                              :story:
+
+Refactoring at the moment is painful because every time we change
+CMakeFiles we end up rebuilding everything. At 2K plus ninja targets,
+it is a long wait. In addition, we have been getting really close to
+the maximum travis time, resulting in lots of manual fiddling to get
+things to work. However, there is one very easy win: split test models
+from production code. This is more than just a quick hack, really:
+
+- we are compiling the test models with every build at present, but
+  since they are not production code, we only really need to validate
+  them whenever they change. That is - for a given OS, compiler, etc -
+  once a test model compiles, links and its tests run, nothing else
+  needs to be said until the test model changes.
+- test models change very infrequently; only when we do a breaking
+  change on Dogen and we rebase.
+- test models by definition do not reference production code (or at
+  least, /should/ not).
+
+As a first step we should try to isolate the two builds (production,
+test models) via variables so that we can create separate
+travis/appveyor builds for them. In the future we should make the
+separation even more explicit, by moving the folder away from the
+production code.
+
+*Previous Understanding*
+
+At present we get random build time violations on travis due to builds
+taking longer than 50 mins. We need to think of ways to reduce the
+build time. Things to try:
+
+- remove all of the hashing etc for the types we don't need to hash.
+- get rid of the warnings for boost.
 
 *** Create the =orchestration= model                                  :story:
 
