--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-20 Sat 14:05]
+#+CAPTION: Clock summary at [2018-10-21 Sun 07:36]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *46:01* |       |       |   0.0 |
+| *Total time*                                                                | *46:15* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 46:01   |       |       |   0.0 |
-| Active                                                                      |         | 46:01 |       |   0.0 |
+| Stories                                                                     | 46:15   |       |       |   0.0 |
+| Active                                                                      |         | 46:15 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  1:10 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  1:02 |   0.0 |
 | Create a document with release steps                                        |         |       |  0:11 |   0.0 |
@@ -47,7 +47,7 @@
 | Fix warnings on windows                                                     |         |       |  4:15 |   0.0 |
 | Read up on framework and API design                                         |         |       |  2:05 |   0.0 |
 | Design a top-level Dogen API                                                |         |       | 12:28 |   0.0 |
-| Reduce build times                                                          |         |       |  4:18 |   0.0 |
+| Reduce build times                                                          |         |       |  4:32 |   0.0 |
 | Create a single binary for all of dogen                                     |         |       |  1:58 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -559,7 +559,8 @@ Problems:
 - it also seems logview is no longer working properly; logs do not get
   recognised properly.
 
-*** STARTED Fix warnings on windows                                   :story:
+*** COMPLETED Fix warnings on windows                                 :story:
+    CLOSED: [2018-10-20 Sat 15:44]
     :LOGBOOK:
     CLOCK: [2018-10-20 Sat 14:01]--[2018-10-20 Sat 14:05] =>  0:04
     CLOCK: [2018-10-20 Sat 13:10]--[2018-10-20 Sat 13:28] =>  0:18
@@ -688,6 +689,7 @@ Architecture vision:
 
 *** STARTED Reduce build times                                        :story:
     :LOGBOOK:
+    CLOCK: [2018-10-20 Sat 20:56]--[2018-10-20 Sat 21:10] =>  0:14
     CLOCK: [2018-10-19 Fri 22:23]--[2018-10-19 Fri 22:40] =>  0:17
     CLOCK: [2018-10-19 Fri 22:06]--[2018-10-19 Fri 22:22] =>  0:16
     CLOCK: [2018-10-19 Fri 20:31]--[2018-10-19 Fri 22:01] =>  1:30
@@ -715,6 +717,13 @@ testing components as we did in the past. We should remove all tests
 that rely on serialisation, even including dia - it should be replaced
 by the XML tool anyway, so no point in paying the cost now. Or perhaps
 we can leave dia for last and do all other models.
+
+Problems:
+
+- external.json:
+
+: ../../../../projects/dogen.external.json/src/serialization/registrar_ser.cpp:29:10: fatal error: 'dogen.options/serialization/registrar_ser.hpp' file not found
+; #include "dogen.options/serialization/registrar_ser.hpp"
 
 *** STARTED Create a single binary for all of dogen                   :story:
     :LOGBOOK:
