--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-22 Mon 12:37]
+#+CAPTION: Clock summary at [2018-10-22 Mon 12:43]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *50:19* |       |       |   0.0 |
+| *Total time*                                                                | *50:24* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 50:19   |       |       |   0.0 |
-| Active                                                                      |         | 50:19 |       |   0.0 |
+| Stories                                                                     | 50:24   |       |       |   0.0 |
+| Active                                                                      |         | 50:24 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  1:10 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  1:02 |   0.0 |
 | Create a document with release steps                                        |         |       |  0:11 |   0.0 |
@@ -48,7 +48,7 @@
 | Setup a secondary machine for development                                   |         |       |  1:04 |   0.0 |
 | Read up on framework and API design                                         |         |       |  2:37 |   0.0 |
 | Design a top-level Dogen API                                                |         |       | 12:46 |   0.0 |
-| Reduce build times                                                          |         |       |  6:42 |   0.0 |
+| Remove facets that are not being used                                       |         |       |  6:47 |   0.0 |
 | Create a single binary for all of dogen                                     |         |       |  1:58 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -711,8 +711,9 @@ Architecture vision:
 - for generation we can use the "template approach", whereby the
   generation element becomes a template.
 
-*** STARTED Reduce build times                                        :story:
+*** STARTED Remove facets that are not being used                     :story:
     :LOGBOOK:
+    CLOCK: [2018-10-22 Mon 12:38]--[2018-10-22 Mon 12:43] =>  0:05
     CLOCK: [2018-10-22 Mon 12:23]--[2018-10-22 Mon 12:37] =>  0:14
     CLOCK: [2018-10-22 Mon 11:35]--[2018-10-22 Mon 11:56] =>  0:21
     CLOCK: [2018-10-22 Mon 11:03]--[2018-10-22 Mon 11:34] =>  0:31
