--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-22 Mon 13:01]
+#+CAPTION: Clock summary at [2018-10-22 Mon 15:03]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *50:41* |       |       |   0.0 |
+| *Total time*                                                                | *51:09* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 50:41   |       |       |   0.0 |
-| Active                                                                      |         | 50:41 |       |   0.0 |
+| Stories                                                                     | 51:09   |       |       |   0.0 |
+| Active                                                                      |         | 51:09 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  1:10 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  1:02 |   0.0 |
 | Create a document with release steps                                        |         |       |  0:11 |   0.0 |
@@ -48,7 +48,7 @@
 | Setup a secondary machine for development                                   |         |       |  1:04 |   0.0 |
 | Read up on framework and API design                                         |         |       |  2:37 |   0.0 |
 | Design a top-level Dogen API                                                |         |       | 12:46 |   0.0 |
-| Remove facets that are not being used                                       |         |       |  7:04 |   0.0 |
+| Remove facets that are not being used                                       |         |       |  7:32 |   0.0 |
 | Create a single binary for all of dogen                                     |         |       |  1:58 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -713,6 +713,7 @@ Architecture vision:
 
 *** STARTED Remove facets that are not being used                     :story:
     :LOGBOOK:
+    CLOCK: [2018-10-22 Mon 14:35]--[2018-10-22 Mon 15:03] =>  0:28
     CLOCK: [2018-10-22 Mon 12:44]--[2018-10-22 Mon 13:01] =>  0:17
     CLOCK: [2018-10-22 Mon 12:38]--[2018-10-22 Mon 12:43] =>  0:05
     CLOCK: [2018-10-22 Mon 12:23]--[2018-10-22 Mon 12:37] =>  0:14
