--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,29 +13,29 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-13 Wed 11:04]
+#+CAPTION: Clock summary at [2019-02-13 Wed 18:34]
 | <75>                                                 |          |        |        |       |
 | Headline                                             | Time     |        |        |     % |
 |------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                         | *174:59* |        |        | 100.0 |
+| *Total time*                                         | *176:30* |        |        | 100.0 |
 |------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                              | 174:59   |        |        | 100.0 |
-| Active                                               |          | 174:59 |        | 100.0 |
+| Stories                                              | 176:30   |        |        | 100.0 |
+| Active                                               |          | 176:30 |        | 100.0 |
 | Edit release notes for previous sprint               |          |        |   2:03 |   1.2 |
 | Sprint and product backlog grooming                  |          |        |   4:43 |   2.7 |
-| Work on MASD theory                                  |          |        | 113:38 |  64.9 |
+| Work on MASD theory                                  |          |        | 113:38 |  64.4 |
 | Rename models to fit MASD architecture               |          |        |   4:56 |   2.8 |
 | Read up on framework and API design                  |          |        |   0:57 |   0.5 |
 | Analyse the state of the mess of refactors           |          |        |   6:27 |   3.7 |
 | Create the =orchestration= model                     |          |        |   4:15 |   2.4 |
 | Update vcpkg across all operative systems            |          |        |   4:35 |   2.6 |
 | Update C# reference models to latest dogen           |          |        |   0:42 |   0.4 |
-| Convert the utility model into a regular dogen model |          |        |   7:27 |   4.3 |
+| Convert the utility model into a regular dogen model |          |        |   7:27 |   4.2 |
 | Improve support for clang-cl builds                  |          |        |   2:02 |   1.2 |
 | Great meta-data rename                               |          |        |   4:54 |   2.8 |
-| Create a single binary for all of dogen              |          |        |  16:27 |   9.4 |
+| Create a single binary for all of dogen              |          |        |  16:27 |   9.3 |
 | Dogen's vcpkg export for OSX was created from master |          |        |   0:46 |   0.4 |
-| Move generation properties into meta-data            |          |        |   1:07 |   0.6 |
+| Move generation properties into meta-data            |          |        |   2:38 |   1.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -676,6 +676,8 @@ Problems:
 
 *** STARTED Move generation properties into meta-data                 :story:
     :LOGBOOK:
+    CLOCK: [2019-02-13 Wed 17:53]--[2019-02-13 Wed 18:34] =>  0:41
+    CLOCK: [2019-02-13 Wed 17:02]--[2019-02-13 Wed 17:52] =>  0:50
     CLOCK: [2019-02-12 Tue 18:30]--[2019-02-12 Tue 18:43] =>  0:13
     CLOCK: [2019-02-12 Tue 17:35]--[2019-02-12 Tue 18:29] =>  0:54
     :END:
@@ -1522,7 +1524,7 @@ add the compiler name to the package we can then upload them too. This
 would be good because we can then test to make sure all packages are
 working correctly.
 
-*** Fix clang-cl broken test                                          :story:
+*** Fix clang-cl broken test and warnings                             :story:
 
 We have one test failing on clang-cl, ref impl:
 
@@ -1536,6 +1538,12 @@ It seems that the boost registration is failing on debug. This is very
 strange as it works on MSVC and Linux, release and debug but fails on
 clang-cl release.
 
+We also have a number of warnings left to clean up, all related to
+boost.log:
+
+: masd.dogen.utility.lib(lifecycle_manager.cpp.obj) : warning LNK4217: locally defined symbol
+: ?get_tss_data@detail@boost@@YAPEAXPEBX@Z (void * __cdecl boost::detail::get_tss_data(void const *))
+: imported in function "public: struct boost::log::v2s_mt_nt6::sinks::basic_formatting_sink_frontend<char>::formatting_context * __cdecl boost::thread_specific_ptr<struct boost::log::v2s_mt_nt6::sinks::basic_formatting_sink_frontend<char>::formatting_context>::get(void)const " (?get@?$thread_specific_ptr@Uformatting_context@?$basic_formatting_sink_frontend@D@sinks@v2s_mt_nt6@log@boost@@@boost@@QEBAPEAUformatting_context@?$basic_formatting_sink_frontend@D@sinks@v2s_mt_nt6@log@2@XZ)
 
 ** Deprecated
 *** CANCELLED Update =yarn.dia= traits to external                    :story:
