--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,18 +13,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-14 Thu 12:19]
+#+CAPTION: Clock summary at [2019-02-14 Thu 14:39]
 | <75>                                                 |          |        |        |       |
 | Headline                                             | Time     |        |        |     % |
 |------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                         | *178:53* |        |        | 100.0 |
+| *Total time*                                         | *179:31* |        |        | 100.0 |
 |------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                              | 178:53   |        |        | 100.0 |
-| Active                                               |          | 178:53 |        | 100.0 |
+| Stories                                              | 179:31   |        |        | 100.0 |
+| Active                                               |          | 179:31 |        | 100.0 |
 | Edit release notes for previous sprint               |          |        |   2:03 |   1.1 |
 | Sprint and product backlog grooming                  |          |        |   4:43 |   2.6 |
-| Work on MASD theory                                  |          |        | 113:38 |  63.5 |
-| Rename models to fit MASD architecture               |          |        |   4:56 |   2.8 |
+| Work on MASD theory                                  |          |        | 113:38 |  63.3 |
+| Rename models to fit MASD architecture               |          |        |   4:56 |   2.7 |
 | Read up on framework and API design                  |          |        |   0:57 |   0.5 |
 | Analyse the state of the mess of refactors           |          |        |   6:27 |   3.6 |
 | Create the =orchestration= model                     |          |        |   4:15 |   2.4 |
@@ -35,7 +35,7 @@
 | Great meta-data rename                               |          |        |   4:54 |   2.7 |
 | Create a single binary for all of dogen              |          |        |  16:27 |   9.2 |
 | Dogen's vcpkg export for OSX was created from master |          |        |   0:46 |   0.4 |
-| Move generation properties into meta-data            |          |        |   4:30 |   2.5 |
+| Move generation properties into meta-data            |          |        |   5:08 |   2.9 |
 | Fix clang-cl warnings                                |          |        |   0:31 |   0.3 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -677,6 +677,7 @@ Problems:
 
 *** STARTED Move generation properties into meta-data                 :story:
     :LOGBOOK:
+    CLOCK: [2019-02-14 Thu 14:01]--[2019-02-14 Thu 14:39] =>  0:38
     CLOCK: [2019-02-14 Thu 09:54]--[2019-02-14 Thu 11:46] =>  1:52
     CLOCK: [2019-02-13 Wed 17:53]--[2019-02-13 Wed 18:34] =>  0:41
     CLOCK: [2019-02-13 Wed 17:02]--[2019-02-13 Wed 17:52] =>  0:50
